PHP SDK now supports feature flags!

--- a/packages/docs/pages/app/api.mdx
+++ b/packages/docs/pages/app/api.mdx
@@ -67,5 +67,6 @@ We offer official SDKs that work with these data structures in a few popular lan
 - [Javascript/Typescript](/lib/js)
 - [React](/lib/react)
 - [Go](/lib/go)
+- [PHP](/lib/php)
 - [Kotlin (Android)](/lib/kotlin)
 - [Build your own](/lib/build-your-own)
