--- a/packages/docs/pages/lib/php.mdx
+++ b/packages/docs/pages/lib/php.mdx
@@ -1,6 +1,6 @@
 # PHP
 
-View the full documentation on [GitHub](https://github.com/growthbook/growthbook-php).
+The GrowthBook PHP SDK requires PHP version 7.1 or greater.
 
 ## Installation
 
@@ -11,221 +11,188 @@ GrowthBook is available on Composer:
 ## Quick Usage
 
 ```php
-$client = new Growthbook\Client();
+// Get current feature flags from GrowthBook API
+// TODO: persist the JSON in a database or cache in production
+const FEATURES_ENDPOINT = 'https://cdn.growthbook.io/api/features/key_prod_abc123';
+$apiResponse = json_decode(file_get_contents(FEATURES_ENDPOINT), true);
+$features = $apiResponse["features"];
 
-// Define the user that you want to run an experiment on
-$user = $client->user(["id"=>"12345"]);
+// Create a GrowthBook instance
+$growthbook = Growthbook\Growthbook::create()
+  ->withFeatures($features)
+  ->withAttributes([
+    'id' => $userId,
+    'someCustomAttribute' => true
+  ]);
 
-// Define the experiment
-$experiment = new Growthbook\Experiment("my-experiment", ["A", "B"]);
+// Feature gating
+if ($growthbook->isOn("my-feature")) {
+  echo "It's on!";
+} else {
+  echo "It's off :(";
+}
 
-// Put the user in the experiment
-$result = $user->experiment($experiment);
+// Remote configuration with fallback
+$color = $growthbook->getValue("button-color", "blue");
 
-echo $result->value; // "A" or "B"
+echo "<button style='color:${color}'>Click Me!</button>";
 ```
 
-At the end of the request, you would track all of the viewed experiments in your analytics tool or database (Segment, GA, Mixpanel, etc.):
+Some of the feature flags you evaluate might be running an A/B test behind the scenes which you'll want to track in your analytics system.
+
+At the end of the request, you can loop through all experiments and track them however you want to:
 
 ```php
-$impressions = $client->getViewedExperiments();
+$impressions = $growthbook->getViewedExperiments();
 foreach($impressions as $impression) {
   // Whatever you use for event tracking
   Segment::track([
-    "userId" => $impression->userId,
+    "userId" => $userId,
     "event" => "Experiment Viewed",
     "properties" => [
       "experimentId" => $impression->experiment->key,
       "variationId" => $impression->result->variationId
     ]
-  ])
+  ]);
 }
 ```
 
-## Experiments
+## The Growthbook Class
 
-As shown above, the simplest experiment you can define has an id and an array of variations.
-
-There is an optional 3rd argument, which is an associative array of additional options:
-
-- **weights** (`float[]`) - How to weight traffic between variations. Must add to 1 and be the same length as the number of variations.
-- **status** (`string`) - "running" is the default and always active. "draft" is only active during QA and development. "stopped" is only active when forcing a winning variation to 100% of users.
-- **coverage** (`float`) - What percent of users should be included in the experiment (between 0 and 1, inclusive)
-- **url** (`string`) - Users can only be included in this experiment if the current URL matches this regex
-- **groups** (`string[]`) - User groups that should be included in the experiment (e.g. internal employees, qa testers)
-- **force** (`int`) - All users included in the experiment will be forced into the specific variation index
-- **randomizationUnit** (`string`) - The type of user id to use for variation assignment. Defaults to `id`.
-
-## Running Experiments
-
-Run experiments by calling `$user->experiment()` which returns an object with a few useful properties:
+The `Growthbook` class has a number of properties. These can be set using a Fluent interface or can be passed into a constructor using an associative array. Every property also has a getter method if needed. Here's an example:
 
 ```php
-$result = $user->experiment(new Growthbook\Experiment(
-  "my-experiment", ["A", "B"]
-);
+// Using the fluent interface
+$growthbook = Growthbook\Growthbook::create()
+  ->withFeatures($features)
+  ->withAttributes($attributes);
 
-// If user is part of the experiment
-echo $result->inExperiment; // true or false
-
-// The index of the assigned variation
-echo $result->variationId; // 0 or 1
-
-// The value of the assigned variation
-echo $result->value; // "A" or "B"
-```
-
-The `inExperiment` flag can be false if the experiment defines any sort of targeting rules which the user does not pass. In this case, the user is always assigned variation index `0` and the first variation value.
-
-## Client Configuration
-
-The `Growthbook\Client` constructor takes an optional config arugment:
-
-```php
-$config = new Growthbook\Config([
-  // options go here
+// Using the constructor
+$growthbook = new Growthbook\Growthbook([
+  'features' => $features,
+  'attributes' => $attributes
 ]);
-$client = new Growthbook\Client($config);
+
+// Getter methods
+print_r($growthbook->getFeatures());
+print_r($growthbook->getAttributes());
 ```
 
-The `Growthbook\Config` constructor takes an associative array of options. Below are all of the available options currently:
+Note: you can also use the fluent methods (e.g. `withFeatures`) at any point to update properties.
 
-- **enabled** - Default true. Set to false to completely disable all experiments.
-- **logger** - An optional psr-3 logger instance
-- **url** - The url of the page (defaults to `$_SERVER['REQUEST_URL']` if not set)
-- **enableQueryStringOverride** - Default false. If true, enables forcing variations via the URL. Very useful for QA. https://example.com/?my-experiment=1
+### Features
 
-You can change configuration options at any time by setting properties directly:
+Defines all of the available features plus rules for how to assign values to users. Features are usually fetched from the GrowthBook API and persisted in cache or a database in production.
+
+Feature definitions are defined in a JSON format. You can fetch them directly from the GrowthBook API:
 
 ```php
-$client->config->enabled = false;
+const FEATURES_ENDPOINT = 'https://cdn.growthbook.io/api/features/key_prod_abc123';
+$apiResponse = json_decode(file_get_contents(FEATURES_ENDPOINT), true);
+$features = $apiResponse["features"];
 ```
 
-## User Configuration
-
-The `$client->user` method takes two arguments: `$ids` and `$groups` (optional).
+Or, you can use a copy stored in your database or cache server instead:
 
 ```php
-$user = $client->user([
-  // Any user id you want to randomize an experiment by
-  "id" => "123",
-  "anonId" => "abc",
-  "companyId" => "456",
-], [
-  // Any groups the user is a part of
-  "internal" => true,
-  "beta" => true,
-  "qa" => false
-]);
+// From database/cache
+$jsonString = '{"feature-1": {...}, "feature-2": {...}}';
+$features = json_decode($jsonString, true);
 ```
 
-### Randomization Units
+We recomend the cache approach for production.
 
-On an experiment-by-experiment basis, you can choose which user id you want to use for randomization.
+### Attributes
 
-Most of the time, you'll want to use `id` if your experiment is for logged-in users only or `anonId` if your experiment includes any logged out users.
+You can specify attributes about the current user and request. These are used for two things:
 
-For some experiments, you may need other units like `companyId`, `childId`, `geoRegion`, etc.
+1.  Feature targeting (e.g. paid users get one value, free users get another)
+2.  Assigning persistent variations in A/B tests (e.g. user id "123" always gets variation B)
+
+Attributes can be any JSON data type - boolean, integer, float, string, or array.
 
 ```php
-new Experiment("company-test", ["A", "B"], [
-  "randomizationUnit" => "companyId"
-]);
-// Now all users in the same company will see the same variation
+$attributes = [
+  'id' => "123",
+  'loggedIn' => true,
+  'deviceId' => "abc123def456",
+  'age' => 21,
+  'tags' => ["tag1", "tag2"],
+  'account' => [
+    'age' => 90
+  ]
+];
 ```
 
-### Groups
+If you want to update attributes later, please note that the `withAttributes` method completely overwrites the attributes object. You can use `array_merge` if you only want to update a subset of fields:
 
-Experiments can specify a list of user groups which are allowed in the experiment. If a user is not a member of one of the groups listed, they will be excluded.
-
-```php
-$result = $user->experiment(
-    "my-targeted-experiment",
-    ["A", "B"],
-    [
-      "groups" => ["beta", "qa"]
-    ]
-]);
+```ts
+// Only update the url attribute
+$growthbook->withAttributes(array_merge(
+  $growthbook->getAttributes(),
+  [
+    'url' => '/checkout'
+  ]
+));
 ```
 
-In the above example, if the user is not in either `beta` or `qa`, then `$result->inExperiment` will be false and they will be assigned variation index `0`.
+### Tracking Experiments
 
-## Overriding Weights and Targeting
+Any time an experiment is run to determine the value of a feature, you want to track that event in your analytics system.
 
-It's common practice to adjust experiment settings after a test is live. For example, slowly ramping up traffic, stopping a test automatically if guardrail metrics go down, or rolling out a winning variation to 100% of users.
-
-Instead of constantly changing your code, you can use client overrides. For example, to roll out a winning variation to 100% of users:
+You can either do this via a callback function:
 
 ```php
-$client->overrides->set("experiment-key", [
-    "status" => 'stopped',
-    // Force variation index 1
-    "force" => 1
-]);
-```
-
-The full list of experiment properties you can override is:
-
-- status
-- force
-- weights
-- coverage
-- groups
-- url
-
-This data structure can be easily seralized and stored in a database or returned from an API. There is a small helper function if you have all of your overrides in a single JSON object:
-
-```php
-$json = '{
-  "experiment-key-1": {
-    "status": "stopped"
-  },
-  "experiment-key-2": {
-    "weights": [0.8, 0.2]
-  }
-}';
-
-// Convert to associative array
-$overrides = json_decode($json, true);
-
-// Import into the client
-$client->importOverrides($overrides);
-```
-
-### Tracking
-
-It's likely you already have some event tracking on your site with the metrics you want to optimize (Google Analytics, Segment, Mixpanel, etc.).
-
-For A/B tests, you just need to track one additional event - when someone views a variation.
-
-You can call `$client->getViewedExperiments()` at the end of a request to forward to your analytics tool of choice.
-
-```php
-$impressions = $client->getViewedExperiments();
-foreach($impressions as $impression) {
-  // Whatever you use for event tracking
+$trackingCallback = function (
+  Growthbook\InlineExperiment $experiment,
+  Growthbook\ExperimentResult $result
+) {
+  // Segment.io example
   Segment::track([
-    "userId" => $impression->userId,
+    "userId" => $userId,
+    "event" => "Experiment Viewed",
+    "properties" => [
+      "experimentId" => $experiment->key,
+      "variationId" => $result->variationId
+    ]
+  ]);
+};
+
+// Fluent interface
+$growthbook = Growthbook\Growthbook::create()
+  ->withTrackingCallback($callback);
+
+// Using the construtor
+$growthbook = new Growthbook([
+  'trackingCallback' => $trackingCallback
+]);
+
+// Getter method
+$trackingCallback = $growthbook->getTrackingCallback();
+```
+
+Or track all events at the end of the request by looping through an array:
+
+```php
+$impressions = $growthbook->getViewedExperiments();
+foreach($impressions as $impression) {
+  // Segment.io example
+  Segment::track([
+    "userId" => $userId,
     "event" => "Experiment Viewed",
     "properties" => [
       "experimentId" => $impression->experiment->key,
       "variationId" => $impression->result->variationId
     ]
-  ])
+  ]);
 }
 ```
 
-Each impression object has the following properties:
-
-- experiment (the full experiment object)
-- result (the result of the $user->experiment call)
-- userId (the id used to randomize the experiment result)
-
-Often times you'll want to do the event tracking from the front-end with javascript. To do this, simply add a block to your template (shown here in plain PHP, but similar idea for Twig, Blade, etc.).
+Or, you can pass the impressions onto your front-end and fire analytics events from there. To do this, simply add a block to your template (shown here in plain PHP, but similar idea for Twig, Blade, etc.).
 
 ```php
 <script>
-<?php foreach($client->getViewedExperiments() as $impression): ?>
+<?php foreach($growthbook->getViewedExperiments() as $impression): ?>
   // tracking code goes here
 <?php endforeach; ?>
 </script>
@@ -265,3 +232,83 @@ mixpanel.track("Experiment Viewed", <?=json_encode([
   'Variant name' => $impression->result->variationId
 ])?>);
 ```
+
+## Using Features
+
+There are 3 main methods for interacting with features.
+
+- `$growthbook->isOn("feature-key")` returns true if the feature is on
+- `$growthbook->isOff("feature-key")` returns false if the feature is on
+- `$growthbook->getValue("feature-key", "default")` returns the value of the feature with a fallback
+
+In addition, you can use `$growthbook->getFeature("feature-key")` to get back a `FeatureResult` object with the following properties:
+
+- **value** - The JSON-decoded value of the feature (or `null` if not defined)
+- **on** and **off** - The JSON-decoded value cast to booleans
+- **source** - Why the value was assigned to the user. One of `unknownFeature`, `defaultValue`, `force`, or `experiment`
+- **experiment** - Information about the experiment (if any) which was used to assign the value to the user
+- **experimentResult** - The result of the experiment (if any) which was used to assign the value to the user
+
+## Inline Experiments
+
+Instead of declaring all features up-front and referencing them by ids in your code, you can also just run an experiment directly. This is done with the `$growthbook->runInlineExperiment` method:
+
+```js
+$exp = Growthbook\InlineExperiment::create(
+  "my-experiment",
+  ["red", "blue", "green"]
+);
+
+// Either "red", "blue", or "green"
+echo $growthbook->runInlineExperiment($exp)->value;
+```
+
+As you can see, there are 2 required parameters for experiments, a string key, and an array of variations. Variations can be any data type, not just strings.
+
+There are a number of additional settings to control the experiment behavior. The methods are all chainable. Here's an example that shows all of the possible settings:
+
+```php
+$exp = Growthbook\InlineExperiment::create("my-experiment", ["red","blue"])
+  // Run a 40/60 experiment instead of the default even split (50/50)
+  ->withWeights([0.4, 0.6])
+  // Only include 20% of users in the experiment
+  ->withCoverage(0.2)
+  // Targeting conditions using a MongoDB-like syntax
+  ->withCondition([
+    'country' => 'US',
+    'browser' => [
+      '$in' => ['chrome', 'firefox']
+    ]
+  ])
+  // Use an alternate attribute for assigning variations (default is 'id')
+  ->withHashAttribute("sessionId")
+  // Namespaces are used to run mutually exclusive experiments
+  // Another experiment in the "pricing" namespace with a non-overlapping range
+  //   will be mutually exclusive (e.g. [0.5, 1])
+  ->withNamespace("pricing", 0, 0.5);
+```
+
+### Inline Experiment Return Value
+
+A call to `runInlineExperiment` returns an `ExperimentResult` object with a few useful properties:
+
+```php
+$result = $growthbook->runInlineExperiment($exp);
+
+// If user is part of the experiment
+echo($result->inExperiment); // true or false
+
+// The index of the assigned variation
+echo($result->variationId); // e.g. 0 or 1
+
+// The value of the assigned variation
+echo($result->value); // e.g. "A" or "B"
+
+// The user attribute used to assign a variation
+echo($result->hashAttribute); // "id"
+
+// The value of that attribute
+echo($result->hashValue); // e.g. "123"
+```
+
+The `inExperiment` flag is only set to true if the user was randomly assigned a variation. If the user failed any targeting rules or was forced into a specific variation, this flag will be false.
