Support feature flags in Python SDK

--- a/packages/docs/pages/app/api.mdx
+++ b/packages/docs/pages/app/api.mdx
@@ -68,5 +68,6 @@ We offer official SDKs that work with these data structures in a few popular lan
 - [React](/lib/react)
 - [Go](/lib/go)
 - [PHP](/lib/php)
+- [Python](/lib/python)
 - [Kotlin (Android)](/lib/kotlin)
 - [Build your own](/lib/build-your-own)
