--- a/packages/docs/pages/lib/kotlin.mdx
+++ b/packages/docs/pages/lib/kotlin.mdx
@@ -41,6 +41,8 @@ if (gb.feature("my-feature").on) {
 }
 ```
 
+If you need to set or update attributes asynchronously, you can do so with `setAttributes()`. This will completely overwrite the attributes object with whatever you pass in. Also, be aware that changing attributes may change the assigned feature values. This can be disorienting to users if not handled carefully.
+
 ## Using Features
 
 The `feature` method takes a String feature name and returns a `FeatureResult` object with a few useful properties:
